- Update font-style for opening title - Small bugfix transition quote block (overflow) - Improve transition from stripes to quote block

--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -23,3 +23,12 @@ body {
         url('/fonts/sinkinsans-400regular-webfont.woff') format('woff'),
         url('/fonts/SinkinSans-400Regular.otf') format('otf');
 }
+@font-face {
+    font-family: 'Sinkin Sans';
+    font-style: normal;
+    font-weight: 800;
+    src: // local('Sinkin Sans'),
+        url('sinkinsans-800black-webfont.woff2') format('woff2'),
+        url('sinkinsans-800black-webfont.woff') format('woff'),
+        url('/fonts/SinkinSans-800Black.otf') format('otf');
+}
